--- a/07-Formularios/css/style.css
+++ b/07-Formularios/css/style.css
@@ -2,13 +2,13 @@
 * {
     font-family: 'Poppins', sans-serif;
 }
-
 .container {
-    margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+}
+
+.formulario {
     gap: 30px;
     width: 450px;
 }
