--- a/07-Formularios/css/style.css
+++ b/07-Formularios/css/style.css
@@ -34,7 +34,7 @@
 .google-btn picture {
     width: 35px;
     height: 35px;
-    background-color: white;
+    background-color: black;
     border-radius: 2px;
     display: flex;
     justify-content: center;
